# aruco

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  abi.h  aruco.h  arucofidmarkers.cpp  arucofidmarkers.h  cameraparameters.cpp  cameraparameters.h  cvdrawingutils.cpp  cvdrawingutils.h  exports.h  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  subpixelcorner.cpp  subpixelcorner.h
src/attic/: board.h  boarddetector.h
trunk/: CMakeLists.txt
trunk/src/: CMakeLists.txt  arucofidmarkers.cpp  cvdrawingutils.cpp
trunk/utils/: CMakeLists.txt  aruco_test.cpp  aruco_test_board.cpp  aruco_test_gl.cpp
utils/: CMakeLists.txt  aruco_create_board.cpp  aruco_create_marker.cpp  aruco_selectoptimalmarkers.cpp  aruco_simple_board.cpp  aruco_test.cpp  aruco_test_board.cpp  aruco_test_board_gl.cpp  aruco_test_gl.cpp  cvdrawingutils.cpp  cvdrawingutils.h
