include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/src)
link_libraries(${PROJECT_NAME} ${REQUIRED_LIBRARIES})

add_executable(aruco_test aruco_test.cpp)
#add_executable(aruco_simple aruco_simple.cpp)
add_executable(aruco_create_marker aruco_create_marker.cpp)
#add_executable(aruco_create_board aruco_create_board.cpp)
#add_executable(aruco_selectoptimalmarkers aruco_selectoptimalmarkers.cpp)
#add_executable(aruco_simple_board aruco_simple_board.cpp)
#add_executable(aruco_test_board aruco_test_board.cpp)
#add_executable(aruco_board_pix2meters aruco_board_pix2meters.cpp)
#add_executable(aruco_test_board_stability aruco_test_board_stability.cpp)

install(TARGETS aruco_test aruco_create_marker RUNTIME DESTINATION bin)
